2005-05-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2670_DOCS_IF.pm:
	Downstream utilization added, and the subtrees rearranged.

2005-05-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* templates/default-rrd.html: Monitor names and comments displayed
	on the leaf HTML

2005-05-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoGeneric.pm:
	replaced CiscoGeneric::sensor-monitor and
	CiscoGeneric::sensor-monitor-regexp with CiscoSensor selector

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	RFC2863_IF_MIB::errors-monitor is no longer supported.
	Replaced with appropriate selector action
	
	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	Implemented IF-MIB selector actions - 
	InBytesMonitor, OutBytesMonitor, ErrorsMonitor, HoltWinters,
	NoPacketCounters, NoErrorCounters, Parameters

2005-05-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm (applySelectors):
	The infrastructure for object selectors

2005-04-29  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoGeneric.pm:
	New discovery parameters: CiscoGeneric::sensor-monitor,
	CiscoGeneric::sensor-monitor-regexp

2005-04-28  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm (runCollector):
	SO_RCVBUF is set explicitly

2005-04-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RRDtool.pm (rrd_make_hrules):
	hrule-legend-X is now a leaf parameter, not view

	* templates/default-recursivedir.html: Recursive directory view

2005-04-08  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/schedulerinfo.in: Timeline reports separate for monitors
	and collectors

2005-03-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/Paradyne.pm:
	New discovery parameter: "Paradyne::slot-name"
